syntax = "proto3";

package xyz.do9core.proto_todo;

option go_package = "/api";

option java_package = "xyz.do9core.proto_todo";
option java_multiple_files = true;

message TodoSummary {
  int64 id = 1;
  string title = 2;
  bool completed = 3;
}

message TodoDetail {
  int64 id = 1;
  string title = 2;
  string description = 3;
  repeated TodoStep steps = 4;
  bool completed = 5;
}

message TodoStep {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}
